# munch-core

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.rst  docker-compose.yml  index.html  setup.cfg  setup.py  sitemap.xml
.docker/clamd/: Dockerfile
.docker/smtpd/: Dockerfile
.docker/spamd/: Dockerfile  spamd.cf
core/deploy/: index.html
core/email_backends/: index.html
core/settings/: index.html
core/storage_backends/: index.html
core/workers/: index.html
dev/: index.html
docs/: mkdocs.yml
docs/docs/: dev.md  index.md  install.md
docs/docs/core/: deploy.md  email_backends.md  settings.md  storage_backends.md  workers.md
docs/docs/rest/: index.md
install/: index.html
mkdocs/: search_index.json
rest/: index.html
rest/campaigns/attachments/: index.html
rest/campaigns/categories/: index.html
rest/campaigns/messages/: index.html
rest/campaigns/overview/: index.html
rest/campaigns/recipients/: index.html
rest/domains/: index.html
rest/transactional/batches/: index.html
rest/transactional/categories/: index.html
rest/transactional/mails/: index.html
rest/transactional/overview/: index.html
rest/users/api_applications/: index.html
rest/users/organizations/: index.html
src/munch/: __about__.py  __init__.py  __main__.py  urls.py  wsgi.py
utils/: fake_emails.py  http_webhook_server.py  perf_recipients_api.py  permissions_table.py
utils/grafana/: dashboard-campaigns-message.json
utils/ssl/: postfix.example.com.cert.pem  postfix.example.com.key.pem
(+319 files in other folders)
