[bumpversion]
current_version = 0.1.0
commit = True
tag = True
tag_name = {new_version}

[bumpversion:file:src/munch/__about__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
description-file = README.md

[flake8]
ignore = N8,D4,D1,D2,D3,C9,E731
exclude =
	build, docs, dist,
	setup.py,
	*/migrations,
	*/api/v2,
	src/munch/settings,
	test*.py,
	utils
